--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,9 +1,11 @@
 @tailwind base;
+@tailwind forms;
 @tailwind components;
 @tailwind utilities;
 
-$yellow : #fdfd6a;
 
 body {
 
+    background-color: #fceeec;
+    color: #1E2F42;
 }
