--- a/templates/front/register.html.twig
+++ b/templates/front/register.html.twig
@@ -1,65 +1,97 @@
 {% extends 'base_front.html.twig' %}
 
-{% block title %}Accueil{% endblock %}
+{% block title %}Accueil
+{% endblock %}
 
 {% block body %}
 
- <div class="container">
-		<div class="row">
-			<div class="card card-small mt-5">
-                <div class="card-header">
-                    <h1>{{ "form.title.register" | trans() }}</h1>
-                </div>
-                <div class="card-body">
-                    {{ form_start(form, {attr:{"id":"form-register", "method":"post" }}) }}
-                    {{ form_errors(form) }}
+	<div class="container  mx-auto mt-6 mb-6 flex items-center  space-0 justify-center py-6 px-6 sm:px-6 lg:px-8">
+		<div class="w-full max-w-md grid gap-4 ">
+			<div>
+				<a href="" class="block text-center text-4xl font-bold">
+					<span class="text-indigo-100">Ja</span>Ji.
+				</a>
+				<h2 class="mt-3 text-center text-3xl font-bold tracking-tight text-gray-900">
+					S'inscrire
+				</h2>
+				<p class="mt-2 text-center text-sm text-gray-600">
+					ou
+					<a href="{{ path('app_login') }}" class="font-medium text-indigo-600 hover:text-indigo-500">
+						S'identifier
+					</a>
+				</p>
+			</div>
+			{{ form_start(form, {attr:{"id":"form-register", "method":"post" }}) }}
 
-                    {{ form_row(form._token) }}
-                        <div class="mb-3 custom-input">
-                            {{ form_label(form.email) }}
-                            {{ form_widget(form.email) }}
-                            {% if form_errors(form.email) %}
-                                <div class="alert alert-danger">
-                                    {% for error in form.email.vars.errors %}
-                                        {{ error.message }}
-                                    {% endfor %}
-                                </div>
-                            {% endif %}
-                        </div>
-                        <div class="mb-3 custom-input">
-                            {{ form_label(form.username) }}
-                            {{ form_widget(form.username) }}
-                            {{ form_errors(form.username)}}
-                        </div>
-                        <div class="mb-3 custom-input">
-                            {{ form_label(form.password.first) }}
-                            {{ form_widget(form.password.first) }}
-                            {% if form.password.first.vars.errors|length > 0 %}
-                                <div class="alert alert-danger">{{ form_errors(form.password.first) }}</div>
-                            {% endif %}
-                        </div>
-                        <div class="mb-3 custom-input">
-                            {{ form_label(form.password.second) }}
-                            {{ form_widget(form.password.second) }}
-                        </div>
+			<div class="-space-y-px shadow-sm py-4 grid gap-4 ">
+				<div class="flex">
+					<div class="flex-1 ">
+						{{ form_label(form.username) }}
+						{{ form_widget(form.username) }}
+						{{ form_errors(form.username)}}
+					</div>
 
-                        <div class="d-flex justify-content-between custom-input">
-                            <div class="mb-3">
-                                <a href="#">{{ "form.link.already_account" | trans() }}</a>
-                            </div>
-                            <div class="mb-3">
-                                <button class="btn btn-light-green" type="submit">
-                                    {{ "form.btn.register" | trans()}}
-                                </button>
-                            </div>
-                        </div>
-                    {{ form_end(form) }}
-                </div>
-            </div>
-        </div>
-    </div>
+					<div class="flex-1">
+						{{ form_label(form.email) }}
+						{{ form_widget(form.email) }}
+						{% if form_errors(form.email) %}
+							<div class="alert alert-danger">
+								{% for error in form.email.vars.errors %}
+									{{ error.message }}
+								{% endfor %}
+							</div>
+						{% endif %}
+					</div>
+					{# <div class="flex-1">
+																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																														{{ form_row(registerForm.lastname) }}
+																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																				    </div> #}
+				</div>
+
+				<div class="flex ">
+
+					<div class="flex-1 ">
+						{{ form_label(form.password.first) }}
+						{{ form_widget(form.password.first) }}
+						{% if form.password.first.vars.errors|length > 0 %}
+							<div class="alert alert-danger">{{ form_errors(form.password.first) }}</div>
+						{% endif %}
+					</div>
+
+					<div class="flex-1 ">
+						{{ form_label(form.password.second) }}
+						{{ form_widget(form.password.second) }}
+					</div>
+
+				</div>
+			</div>
+
+			<div class="flex sm:col-span-2 py-2">
+				<label class="flex items-center">
+					{{ form_row(form.agreeTerms) }}
+					<span class="ml-2 block text-sm text-gray-900">
+						Je suis d'accord avec la politique de confidentialité.
+					</span>
+				</label>
+			</div>
+
+			<div class=" flex px-6 ">
+
+				<div class="flex-1">
+					<button type="submit" class=" inline-flex justify-center rounded-md border border-transparent bg-redComponent py-2 px-4 text-sm text-white font-medium hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">
+
+						S'inscrire
+					</button>
+				</div>
+
+				<div class="flex-1">
+					<a href="{{ path('app_login') }}" class="inline-flex justify-center rounded-md border border-transparent bg-redComponent py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">{{ "form.link.already_account" | trans() }}
+					</a>
+				</div>
+			</div>
+		</div>
+		{{ form_end(form) }}
+	</div>
+
 
 {% endblock %}
-{% block javascripts %}
-
-{% endblock %}
+{% block javascripts %}{% endblock %}
