--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,51 +1,91 @@
 {% extends 'base_front.html.twig' %}
 
-{% block title %}Log in!{% endblock %}
+{% block title %}Log in!
+{% endblock %}
 
- {% block stylesheets %}
-     {{ parent() }}
-     {{ encore_entry_link_tags('login') }}
- {% endblock %}
+{% block stylesheets %}
+	{{ parent() }}
+	{{ encore_entry_link_tags('login') }}
+{% endblock %}
 
 {% block javascripts %}
-    {{ encore_entry_script_tags('login') }}
+	{{ encore_entry_script_tags('login') }}
 {% endblock %}
 
 {% block body %}
-<form method="post">
-    {% if error %}
-        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
+	<div class="flex min-h-full items-center justify-center py-12 px-4 sm:px-6 lg:px-8">
+		<div class="w-full max-w-md space-y-8">
+			<div>
+				<a href="" class="block text-center text-4xl font-bold">
+					<span class="text-indigo-600">Jaji</span>.
+				</a>
+				<h2 class="mt-6 text-center text-3xl font-bold tracking-tight text-gray-900">
+					S'identifier
+				</h2>
+				<p class="mt-2 text-center text-sm text-gray-600">
+					ou
+					<a href="{{ path('app_register') }}" class="font-medium text-indigo-600 hover:text-indigo-500">
+						S'inscrire
+					</a>
+				</p>
+			</div>
+			<form class="mt-8 space-y-6" method="post">
+				{% if error %}
+					<div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+				{% endif %}
 
-    {% if app.user %}
-        <div class="mb-3">
-            You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
-        </div>
-    {% endif %}
+				{% if app.user %}
+					<div class="mb-3">
+						You are logged in as
+						{{ app.user.userIdentifier }},
+						<a href="{{ path('app_logout') }}">Logout</a>
+					</div>
+				{% endif %}
+				<div class="-space-y-px rounded-md shadow-sm">
+					<div>
+						<label for="email-address" class="sr-only">
+							Adresse e-mail
+						</label>
+						<input type="email" value="{{ last_username }}" name="email" autocomplete="email" required class="relative block w-full appearance-none rounded-none rounded-t-md border border-gray-300 px-3 py-2 text-gray-900 placeholder-gray-500 focus:z-10 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm" placeholder="Adresse e-mail"/>
+					</div>
+					<div>
+						<label for="password" class="sr-only">
+							Mot de passe
+						</label>
+						<input id="password" name="password" type="password" autocomplete="current-password" required class="relative block w-full appearance-none rounded-none rounded-b-md border border-gray-300 px-3 py-2 text-gray-900 placeholder-gray-500 focus:z-10 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm" placeholder="Mot de passe"/>
+						<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+					</div>
+				</div>
 
-    <h1 class="text-3xl">Please sign in</h1>
-    <label for="inputEmail">Email</label>
-    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-    <label for="inputPassword">Password</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+				<div class="flex items-center justify-between">
+					<div class="flex items-center">
+						<input id="remember-me" name="_remember_me" type="checkbox" class="h-4 w-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-500"/>
+						<label for="remember-me" class="ml-2 block text-sm text-gray-900">
+							Se souvenir de moi
+						</label>
+					</div>
 
-    <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
-    >
+					<div class="text-sm">
+						<a href="" class="font-medium text-indigo-600 hover:text-indigo-500">
+							Mot de passe oublié ?
+						</a>
+					</div>
 
-    {#
-        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-        See https://symfony.com/doc/current/security/remember_me.html
+				</div>
 
-        <div class="checkbox mb-3">
-            <label>
-                <input type="checkbox" name="_remember_me"> Remember me
-            </label>
-        </div>
-    #}
+				<div>
+					<button type="submit" class="group relative flex w-full justify-center rounded-md border border-transparent bg-redComponent py-2 px-4 text-sm font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">
+						<span class="absolute inset-y-0 left-0 flex items-center pl-3">
+							<svg class="h-5 w-5 text-indigo-500 group-hover:text-indigo-400" viewbox="0 0 20 20" fill="currentColor" aria-hidden="true">
+								<path fill-rule="evenodd" d="M10 1a4.5 4.5 0 00-4.5 4.5V9H5a2 2 0 00-2 2v6a2 2 0 002 2h10a2 2 0 002-2v-6a2 2 0 00-2-2h-.5V5.5A4.5 4.5 0 0010 1zm3 8V5.5a3 3 0 10-6 0V9h6z" clip-rule="evenodd"/>
+							</svg>
+						</span>
+						S'identifier
+					</button>
+				</div>
+			</form>
+		</div>
+	</div>
 
-    <button class="btn btn-lg btn-primary" type="submit">
-        Sign in
-    </button>
-</form>
+
 {% endblock %}
