feature add content page list-twig and page guide-twig

--- a/templates/components/footer.html.twig
+++ b/templates/components/footer.html.twig
@@ -1,4 +1,4 @@
-<footer class="flex flex-col items-center gap-2 border-t border-gray-300 bg-redComponent py-10">
+<footer class="flex flex-col items-center gap-2 border-gray-300 bg-redComponent py-10">
 	<a href="{{ path('app_login') }}" class="text-2xl font-bold">
 		<span class="text-indigo-600">Ja</span>ji.
 	</a>
