--- a/templates/components/navbar.html.twig
+++ b/templates/components/navbar.html.twig
@@ -35,8 +35,8 @@
 					{# <img src="{{ asset( 'uploads/profile/' ~ app.user.profilePicture ) }}" class="h-8 w-8 rounded-full object-cover"/> #}
 					<span class="flex items-center gap-2">
 						<span class="text-sm font-medium">
-							{{ app.user.firstname }}
-							{{ app.user.lastname }}
+							{{ app.user.username }}
+							{# {{ app.user.lastname }} #}
 						</span>
 						<span
 							class="rounded bg-green-100 py-1 px-2 text-xs font-medium uppercase text-green-600">{# {{ app.user.formattedRole }} #}
