:sparkles:(Form): Add form course

--- a/templates/front/guide/index.html.twig
+++ b/templates/front/guide/index.html.twig
@@ -5,4 +5,5 @@
 {% block body %}
     <h1>Guide</h1>
     <a href="{{ path('front_guide_list') }}" class="btn btn-primary">Nos recommendations</a>
+    <a href="{{ path('front_guide_form_step1') }}" class="btn btn-primary">Apprenons à se connaître !</a>
 {% endblock %}
