--- a/templates/front/guide/list.html.twig
+++ b/templates/front/guide/list.html.twig
@@ -13,6 +13,7 @@
                     <li>{{ tag.name }}</li>
                 {% endfor %}
             </ul>
+            <a href="{{ path('front_guide_show', {'slug': content.slug}) }}">Voir</a>
         </div>
     {% endfor %}
 {% endblock %}
