--- a/templates/front/guide/index.html.twig
+++ b/templates/front/guide/index.html.twig
@@ -16,7 +16,7 @@
 						<div class="flex py-2">
 							<a href="{{ path('front_guide_list') }}" class="inline-flex text-md justify-center rounded-md border border-transparent bg-redComponent py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none ">Nos recommandations</a>
 
-							<a href="{{ path('front_guide_form_step1') }}" class="inline-flex text-md justify-center mx-auto rounded-md border border-transparent bg-redComponent py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none ">Apprenons à se connaître !</a>
+							<a href="{{ path('front_guide_form_step1') }}" class="inline-flex text-md justify-center mx-auto rounded-md border border-transparent bg-redComponent py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none ">Apprenons nous à nous connaître !</a>
 						</div>
 
 						<p class="mt-6 text-lg leading-8 text-gray-600">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores impedit perferendis suscipit eaque, iste dolor cupiditate blanditiis ratione.</p>
