--- a/templates/front/guide/list.html.twig
+++ b/templates/front/guide/list.html.twig
@@ -37,7 +37,7 @@
 						</a>
 					</div>
 					<div class="flex-1">
-						<a href="{{ path('app_register') }}" class="mr-2 inline-flex justify-center rounded-md border border-transparent bg-redComponent  font-medium text-white text-xs ">
+						<a href="{{ path('app_register') }}" class="mr-2 inline-flex justify-center rounded-md border border-transparent bg-redComponent py-2 px-4 font-medium text-white text-xs ">
 							Contactez un conseiller
 						</a>
 					</div>
