--- a/templates/front/guide/list.html.twig
+++ b/templates/front/guide/list.html.twig
@@ -1,19 +1,52 @@
-<!DOCTYPE html>
+{% extends 'base_front.html.twig' %}
 
-<title>Nos recommendations</title>
+{% block title %}
+	Nos recommandations
+{% endblock %}
 
 {% block body %}
-    <h1>Nos recommendations</h1>
-    {% for content in contents %}
-        <div>
-            <h2>{{ content.name }}</h2>
-            <p>{{ content.description | raw }}</p>
-            <ul>
-                {% for tag in content.tags %}
-                    <li>{{ tag.name }}</li>
-                {% endfor %}
-            </ul>
-            <a href="{{ path('front_guide_show', {'slug': content.slug}) }}">Voir</a>
-        </div>
-    {% endfor %}
+	<div class="container mx-auto text-center py-10">
+		<img src="{{ asset('images/logo-main.png') }}" alt="logo-main" width="100" height="100" class="mx-auto"/>
+		<h5 class="mt-2 text-xl font-bold sm:text-4xl">Vos informations ont bien été enregistré voici nos recommandations que nous vous proposons :
+		</h5>
+
+	</div>
+
+	<div class="container mx-auto text-center flex flex-row gap-3 px-4 py-10">
+		{% for content in contents %}
+
+			<div
+				class="grid gap-3 rounded overflow-hidden shadow-lg mt-4 bg-white text-redComponent max-w-sm w-full lg:max-w-full">
+				{# <img class="w-full" src="/img/card-top.jpg" alt="Sunset in the mountains"> #}
+				<div class="px-6 py-4">
+					<div class="font-bold text-xl mb-2">{{ content.name }}</div>
+					<p class="text-gray-700 text-base">
+						{{ content.description }}
+					</p>
+				</div>
+				<ul class="px-6 pt-4 pb-2">
+					{% for tag in content.tags %}
+						<li class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">{{ tag.name }}</li>
+					{% endfor %}
+				</ul>
+				<div class="flex py-2">
+					<div class="flex-1">
+						<a href="{{ path('front_guide_show', {'slug': content.slug}) }}" class="mr-2 inline-flex justify-center rounded-md border border-indigo-600 bg-transparent py-2 px-4 text-sm font-medium ">
+							Découvrir
+						</a>
+					</div>
+					<div class="flex-1">
+						<a href="{{ path('app_register') }}" class="mr-2 inline-flex justify-center rounded-md border border-transparent bg-redComponent py-2 px-4 font-medium text-white text-xs ">
+							Contactez un conseiller
+						</a>
+					</div>
+
+				</div>
+			</div>
+		{% endfor %}
+	</div>
+	<body>
+		{% include 'components/footer.html.twig' %}
+
+	</body>
 {% endblock %}
