Feature/content etape quatre (#6)
* feature add navbar-twig and footer-twig and maj css page login-twig and page-register

* feature add content page list-twig and page guide-twig

* Delete .env

* feature add content form1-etape1

* feature add content twig twig form3

* feature add twig content form4 twig content

---------

Co-authored-by: Loviflo <55991199+Loviflo@users.noreply.github.com>

--- a/templates/front/guide/form3.html.twig
+++ b/templates/front/guide/form3.html.twig
@@ -64,9 +64,9 @@
 
 		<div class="float-right ... block bg-white text-sm border border-redComponent shadow hover:bg-gray-100 ">
 
-			<h2 class="font-semibold text-center mt-4 leading-7 ">Vos Étapes</h4>
+			<h2 class="font-semibold text-center mt-4 leading-7 ">Profession</h4>
 
-			<h4 class="p-4 ">Sélectionnez l'étape sur laquelle vous souhaitez revenir</h4>
+			<h4 class="p-4 ">Sélectionnez votre secteur d'activité</h4>
 
 			<ol class=" relative text-gray-500 border-gray-200 py-5">
 				<li class="ml-2 py-2">
